manifests/dhbw-seminarbeit-displaydata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: dhbw-seminarbeit-displaydata
  name: dhbw-seminarbeit-displaydata
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dhbw-seminarbeit-displaydata
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dhbw-seminarbeit-displaydata
    spec:
      containers:
      - env:
        - name: EVENT_BUS_ENDPOINT
          onfigMapKeyRef:
              key: EVENT_BUS_ENDPOINT
              name: env
        - name: MONGO_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: MONGODB_INITIAL_PRIMARY_HOST
              name: env
        - name: MONGO_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: MONGO_HOSTNAME
              name: env
        - name: MONGO_INITDB_DATABASE
          valueFrom:
            configMapKeyRef:
              key: MONGODB_DATABASE
              name: env
        - name: MONGO_INITDB_USERNAME
          valueFrom:
            configMapKeyRef:
              key: MONGO_INITDB_USERNAME
              name: env
        - name: MONGO_INITDB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MONGODB_PASSWORD
              name: env      
        - name: MONGO_PORT
          valueFrom:
            configMapKeyRef:
              key: MONGO_PORT
              name: env
        image: dhbw-seminarbeit-displaydata
        imagePullPolicy: ""
        name: dhbw-seminarbeit-displaydata
        ports:
        - containerPort: 4001
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
