manifests/dhbw-seminarbeit-displaydata-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dhbw-seminarbeit-displaydata
  name: dhbw-seminarbeit-displaydata
spec:
  ports:
  - name: "4001"
    port: 4001
    targetPort: 4001
  selector:
    app.kubernetes.io/name: dhbw-seminarbeit-displaydata
status:
  loadBalancer: {}
