manifests/dhbw-seminarbeit-displaydata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhbw-seminarbeit-displaydata-ingress
spec:
  rules:
  - host: display.co2ampel.example.internal
    http:
      paths:
      - path: /data
        pathType: Exact
        backend:
          service:
            name: dhbw-seminarbeit-displaydata 
            port:
              number: 4001
